<resources>
    <string name="app_name">My weather</string>
    <string name="wind_speed">Wind speed</string>
    <string name="feels_like">Feels like</string>
    <string name="loading_weather">Loading weather</string>
    <string name="please_wait">Please wait</string>
    <string name="cannot_load">Can\'t load weather</string>
    <string name="retry">Retry</string>
    <string name="updated_at">Updated at </string>
    <string name="degrees">°</string>
    <string name="km_h">km/h</string>


    <string name="clear">Clear</string>
    <string name="cloudy">Cloudy</string>
    <string name="mist">Mist</string>
    <string name="snow">Snow</string>
    <string name="sunny">Sunny</string>
    <string name="rain">Rain</string>
    <string name="thunder">Thunder</string>

    <string name="location_title">Location</string>
    <string name="please_select_location">Please select your location</string>
    <string name="selected">Selected</string>

</resources>