<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:background="@drawable/grey_button"
        android:gravity="center"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="12dp"
            android:layout_height="16dp"
            android:layout_marginRight="6dp"
            android:src="@drawable/location_point"/>

        <TextView
            android:id="@+id/location_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/dark_grey"
            android:text="Moscow"
            android:textSize="16sp">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_button"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:elevation="64dp"
        android:visibility="invisible">

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/last_updated_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/dark_grey"
            android:alpha="0.6"
            android:textSize="16sp"
            android:text="Updated at 15:30"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
        <ImageView
            android:layout_marginTop="112dp"
            android:id="@+id/weather_icon"
            android:layout_width="wrap_content"
            android:layout_height="112dp"
            android:src="@drawable/cloudy"
            android:elevation="64dp"/>

        <TextView
            android:layout_marginTop="64dp"
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:text="20°"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_marginTop="24dp"
            android:id="@+id/weather_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/dark_grey"
            android:textSize="24sp"
            android:text="Cloudy"
            android:alpha="0.8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="96dp"
            android:orientation="horizontal"
            android:gravity="bottom|center">
            
            <LinearLayout
                android:layout_width="172dp"
                android:layout_height="88dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/round_rect_white"
                android:elevation="64dp"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/wind_icon"
                    android:elevation="64dp"
                    android:layout_marginRight="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingVertical="16dp">

                    <TextView
                        android:id="@+id/wind_speed"
                        android:text="23 km/h"
                        android:fontFamily="@font/inter_bold"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/wind_speed"
                        android:fontFamily="@font/inter_bold"
                        android:textColor="@color/grey"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="172dp"
                android:layout_height="88dp"
                android:background="@drawable/round_rect_white"
                android:elevation="64dp"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/wind_icon"
                    android:elevation="64dp"
                    android:layout_marginRight="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingVertical="16dp">

                    <TextView
                        android:id="@+id/feels_like_temperature"
                        android:text="12°"
                        android:fontFamily="@font/inter_bold"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/feels_like"
                        android:fontFamily="@font/inter_bold"
                        android:textColor="@color/grey"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_button"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <ProgressBar
            android:layout_marginTop="212dp"
            android:layout_width="72dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:text="@string/loading_weather"
            android:layout_marginTop="48dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:text="@string/please_wait"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_button"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_marginTop="204dp"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:src="@drawable/error_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:text="@string/cannot_load"
            android:layout_marginTop="40dp"/>


        <LinearLayout
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/grey_button"
            android:layout_marginTop="32dp"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/retry_icon"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/more_dark_grey"
                android:alpha="0.8"
                android:textSize="24sp"
                android:text="@string/retry"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>